fix(tui): terminal resize redraw — footer positioning, event system, and poll fallback
Terminal resize was not triggering redraw because:
1. JLine 4 exec provider may not forward SIGWINCH on JDK 25
2. terminal.getWidth() returns cached values, making size poll useless
3. Resize handling bypassed the EventBridge / TuiEvent event system

Changes:
- Add TuiEvent.TerminalResize(width, height) to sealed hierarchy
- Add EventBridge.onTerminalResize(w, h) with emitSync dispatch
- Route WINCH handler and render-loop poll through EventBridge
- Add TerminalResize listener in ScreenManager: recalculate layout,
  update LINE_OFFSET, set needsFullClear and contentDirty
- redrawScrollArea clears entire screen when needsFullClear is set
- Add 500ms size-poll fallback in renderLoop with INFO logging
- Switch JLine provider order to ffm,exec,jni,dumb for native SIGWINCH
- Add ThoughtComponent.onResize(oldHeight) to reveal hidden content
  when window grows, keep bottom anchored when window shrinks
- Call thought.onResize from TuiLayout.recalculate
- Add docs/alice-facade-tui/event/README.md event system documentation
- Update CHANGELOG.md